# snap-skeleton

./: .gitignore  README.md  run-tests.sh  snap-skeleton.cabal
src/: Application.hs  Main.hs  Server.hs  Site.hs
src/Examples/: Echo.hs  JsonEcho.hs  Restful.hs
src/Util/: ByteStringHelper.hs  Curl.hs  HttpClient.hs  HttpTester.hs  HttpUtil.hs  Json.hs  RegexEscape.hs  Rest.hs  TemplateMatch.hs  XmlMatch.hs
test/: FunctionalSpec.hs  HttpTester.hs  RegexEscapeSpec.hs  Specs.hs  TemplateMatchSpec.hs  XmlMatchSpec.hs
